--- a/app/src/main/res/layout/fragment_record_workout_portrait.xml
+++ b/app/src/main/res/layout/fragment_record_workout_portrait.xml
@@ -1,7 +1,8 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".RecordWorkoutPortrait">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -110,12 +111,12 @@
     </LinearLayout>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/map"
-    tools:context="com.example.berkcirisci.alphafitness.RecordWorkout"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/map"
+        tools:context="com.example.berkcirisci.alphafitness.RecordWorkout"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout2"
         android:layout_above="@+id/frameLayout" />
